# lensisku

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  ToDo.md  deny.toml  docker-compose.dev.yml  docker-compose.yml  fetch_mail.sh  nginx.conf  schema.sh  watch.sh
.cargo/: config.toml
.github/workflows/: rust.yml  vue.yml
building/: Dockerfile.npm  Dockerfile.rust  README.txt  build-npm-inside.sh  build-npm.sh  build-rust-inside.sh  build-rust.sh
docs/: canonical_comparison.md  embedding_analysis_findings.md  embedding_improvement_plan.md
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.js
frontend/public/: manifest.json  robots.txt
frontend/src/: App.vue  api.js  i18n.ts  main.ts  shims-js.d.ts
frontend/src/components/: AlertComponent.vue  AudioPlayer.vue  BackgroundComponent.vue  ClipboardButton.vue  CollectionWidget.vue  CombinedFilters.vue  CommentForm.vue  CommentItem.vue  DefinitionCard.vue  DeleteConfirmation.vue  DeleteDefinitionConfirmation.vue  DictionaryEntries.vue  DictionaryList.vue  DynamicInput.vue  Error.vue  FooterComponent.vue  ImageUpload.vue  NavLink.vue  (+17 more)
migrations/: V100__add_just_information_direction.sql  V101__user_session_logging.sql  V102__create_message_spam_votes_table.sql  V103__paypal_subscriptions.sql  V104__add_fields_to_collection_items.sql  V106__add_oauth_accounts.sql  V107__add_quiz_flashcard_type.sql  V108__add_user_profile_threads.sql  V109__add_search_indexes.sql  V110__update_embedding_dimension.sql  V111__revert_embedding_to_384.sql  V114__denormalize_search_fields.sql  V115__cache_valsi_fields_and_optimize_indexes.sql  V116__cache_glosswords_for_fast_search.sql  V118__invalidate_embeddings_for_improved_preprocessing.sql  V119__add_canonical_form.sql  V120__add_use_canonical_comparison.sql  V121__fix_sync_definition_cache_no_d_in_set.sql  V122__fix_sync_definition_cache_no_target_in_from.sql  V12__user_created_at.sql  V14__hash_support.sql  V16__update_keywordmapping_place.sql  V17__messages_constraints.sql  V18__password_reset.sql  V20__definition_votes_constraint.sql  V21__get_definition_indexes.sql  V22__owner_editable_definitions.sql  V23__move_etymology.sql  V24__etymology_in_versions.sql  V25__definitions_created_at.sql  V26__subscription.sql  V27__populate_valsi_subscriptions.sql  V28__email_notification_sent.sql  V29__collections.sql  V2__lensisku.sql  V30__comments.sql  V31__follows.sql  V32__hashtags.sql  V33__collection_item_position.sql  V34__freeze_official_data.sql  (+65 more)
schema/: schema.sql
src/: api_docs.rs  auth_utils.rs  config.rs  db.rs  error.rs  main.rs  openapi.rs  server.rs  tersmu.rs
src/auth/: controller.rs  dto.rs  email_confirmation.rs  error.rs  extractor.rs  mod.rs  models.rs  oauth.rs  permissions.rs  service.rs
src/background/: mod.rs  service.rs
src/collections/: controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/comments/: controller.rs  dto.rs  errors.rs  mod.rs  models.rs  service.rs
src/export/: controller.rs  mod.rs  models.rs  service.rs
src/flashcards/: controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/grammar/: loglan.peg  lojban.peg
src/jbovlaste/: broadcast.rs  controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/language/: controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/mailarchive/: controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/middleware/: cache.rs  image.rs  limiter.rs  mod.rs
src/muplis/: controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/notifications/: mod.rs  service.rs  tasks.rs
src/payments/: controller.rs  dto.rs  error.rs  mod.rs  paypal.rs  service.rs
src/sessions/: controller.rs  dto.rs  mod.rs  models.rs  service.rs
src/subscriptions/: controller.rs  mod.rs  models.rs  service.rs
src/users/: controller.rs  dto.rs  mod.rs  service.rs
src/utils/: mod.rs
src/versions/: controller.rs  dto.rs  mod.rs  models.rs  service.rs
test/: test.rs
test-maildir/: 1721705830.3949238_35.lebna_2,S  spaceheader.eml
test/paypal/paypal-webhook-validator-rs/: .env.example  Cargo.toml
test/paypal/paypal-webhook-validator-rs/src/: main.rs
(+74 files in other folders)
