[package]
name = "lensisku"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3           # Maximum optimizations
lto = "fat"            # Enable link-time optimization across all crates
codegen-units = 1      # Further optimize at the cost of compile time
panic = "abort"        # Remove panic unwinding code
strip = true          # Strip symbols from binary
overflow-checks = false # Disable integer overflow checks
debug = false         # No debug symbols
debug-assertions = false # Disable debug assertions
incremental = false   # Disable incremental compilation
rpath = false        # Disable runtime path

# Enable a small amount of optimization in debug mode
[profile.dev.package."*"]
opt-level = 1

# Profile for benchmark builds
[profile.bench]
inherits = "release"
lto = true
codegen-units = 1

[[bin]]
name = "lensisku"
path = "src/main.rs"
[[bin]]
name = "test"
path = "test/test.rs"

[dependencies]
actix-web = { version = "4.10.2", features = ["rustls"] }
actix-files = "0.6.6"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
postgres-types = { version = "0.2.9", features = ["derive"]}
pgvector = { version = "0.4.0", features = ["postgres"] }
ndarray = "0.16.1"
chrono = { version = "0.4.41", features = ["serde"] }
refinery = { git = "https://github.com/rust-db/refinery.git", rev = "3fa178fc2da8d29a897886b95d05435302811f6c", features = [
	"tokio-postgres",
] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
utoipa = { version = "5.3.1", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
num_cpus = "1.16.0"
futures = "0.3.31"
rayon = "1.10.0"
tokio = { version = "1.44.2", features = ["full", "time", "sync"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
actix-web-httpauth = "0.8.2"
oauth2 = "4.4.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
thiserror = "1.0.63"
tracing = "0.1.40"
url = "2.5.4"
mailparse = "0.16.1"
base64 = "0.22.1"
walkdir = "2.5.0"
md5 = "0.7.0"
actix-cors = "0.7.1"
encoding_rs = "0.8.35"
lettre = { version = "0.11.15", features = ["smtp-transport", "tokio1-native-tls"] }
rand = "0.9.1"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tectonic = {version = "0.15.0", features = ["external-harfbuzz"]}
regex = "1.11.1"
utoipauto = "0.2.0"
tempfile = "3.19.1"
xml = "0.8.20"
lazy_static = "1.5.0"
once_cell = "1.21.3"
actix-limitation = "0.5"
redis = { version = "0.30.0", features = ["tokio-comp"] }
unicode-segmentation = "1.12.0"
bytes = "1.9.0"
actix-web-grants = "4.1.1"
fsrs = "3.0.0"
image = { version = "0.25.6", features = ["jpeg", "png"] }
webp = "0.3.0"
async-trait = "0.1"
validator = { version = "0.20.0", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10.9"
hex = "0.4.3"
ring = "0.17.14"
x509-parser = "0.17.0"
crc32fast = "1.4.2"

camxes-rs = "0.1.1"
x509-certificate = "0.24.0"
tracing-subscriber = "0.3"
openssl = "0.10.72"
csv = "1.3.1"
vlazba = "0.7.14"
parking_lot = "0.12"
tokio-stream = "0.1"
futures-util = "0.3"
quoted_printable = "0.5.1"
actix-web-lab = "0.24.1"
zip = "0.6.6"

[dev-dependencies]
criterion = "0.5.1"

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
