[package]
name = "paypal-webhook-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
sha2 = "0.11.0-pre.4"
rsa = "0.9.7"
crc32fast = "1.3"
x509-certificate = "0.23"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.8"
bytes = "1.5"
openssl = "0.10.68"
